# CRIS-SME

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt  vercel.json
.github/: pull_request_template.md
data/: benchmark_dataset.json  ce_question_mapping.json  compliance_mappings.json  confidence_calibration.json  control_catalog.json  control_spec_overrides.json  cyber_essentials_controls.json  cyber_insurance_questions.json  evaluation_dataset_catalog.json  evaluation_dataset_schema.json  native_recommendation_mapping.json  policy_pack_changelog.json  sample_findings.json  synthetic_sme_profiles.json
docs/: architecture.md  assessment-assurance.md  assessment-replay.md  assurance-case.md  assurance-portal.md  azure-evidence-lab.md  azuregoat-lab-guide.md  ci-cd-and-pages.md  ci-cd-and-vercel.md  claim-bound-narrative.md  claim-verification-pack.md  compliance-mapping.md  conference-abstract-draft.md  control-drift-attribution.md  control-lifecycle.md  cris-rebrand-and-repository-plan.md  dashboard.md  data-model.md  decision-ledger.md  decision-provenance-graph.md  decision-review-queue.md  demo-console.md  evaluation-dataset-track.md  evaluation-plan.md  evaluation-results-draft.md  evidence-gap-backlog.md  evidence-lineage.md  finding-lifecycle.md  frontend-architecture.md  history-and-drift.md  innovation-and-ukri-readiness.md  live-azure-case-study.md  manuscript-draft.md  methodology.md  multi-cloud-expansion.md  paper-outline.md  paper-results-tables.md  policy-pack-changelog.md  product-strategy.md  project-overview.md  (+15 more)
tests/: __init__.py  (+47 more)
(+148 files in other folders)
